# support-docs

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.woodpecker/: build-docs.yaml
docs/assets/: README.md
docs/drafts/: capture-settings-schmitt-draft.md
docs/en/: hardware-configuration.md  index.md  technical-support.md
docs/zh/: index.md
docs/zh-TW/: index.md
drafts/: info-panel.md
drafts/zh-TW/: hardware-configuration.md
faq/: index.html
hardware-configuration/: index.html
logic-analyzer/: index.html
logic-analyzer/advanced-capture/: index.html
logic-analyzer/bus-decode/: index.html
logic-analyzer/capture-settings/: index.html
logic-analyzer/channel-labels/: index.html
logic-analyzer/cursor/: index.html
logic-analyzer/demo-mode/: index.html
logic-analyzer/export-data/: index.html
logic-analyzer/file-operations/: index.html
logic-analyzer/interface-guide/: index.html
logic-analyzer/keyboard-shortcuts/: index.html
logic-analyzer/navigate-data/: index.html
logic-analyzer/navigate-report/: index.html
logic-analyzer/power-sequence-validation/: index.html
logic-analyzer/preferences/: index.html
logic-analyzer/quick-start/: index.html
logic-analyzer/stack-oscilloscope/: index.html
logic-analyzer/trigger-settings/: index.html
protocol-exerciser/: index.html
search/: search_index.json
software/download/: index.html
software/driver/: index.html
software/sessions/: index.html
stylesheets/: extra.css
zh/: index.html
zh-TW/: index.html
(+392 files in other folders)
