[project]
name = "ladocs"
version = "0.0.1"
description = "Acute LA Application User Guide"
license = "Private"
readme = "README.md"
authors = [
    { name = "Eric Tsai", email = "erictsai@acute.com.tw" },
]
keywords = [ "development" ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-material>=9.6.22",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-static-i18n[material]>=1.3.0",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.18.2",
]
